# terminalia

./: .gitignore  Cargo.toml  README.md  barren.map  basic.map  demo.tape  readme.md  terminal.py  terminalia.py  utilities.py
config/: drops.json  drops.yaml  items.json  items.yaml  monsters.json  monsters.yaml
maps/: basiclarge.map  home.map  tree.txt
resources/: items.json
src/: component.rs  damage_system.rs  floor.rs  main.rs  map.rs  monster_system.rs  random_mover.rs  rect.rs  spawn.rs  visibility_system.rs
src/effect/: effect.rs
src/generate/: config.rs  dungeon.rs  floor.rs  generate.rs  generator.rs  map.rs  mod.rs  random_table.rs  rect.rs  spawn.rs
src/input/: game_over.rs  main_explore.rs  main_inventory.rs  main_log.rs  main_quit.rs  main_trading.rs  menu.rs  mod.rs
src/logbook/: logbook.rs
src/old/: main_rltk.rs
src/render/: base.rs  game.rs  game_over.rs  inventory.rs  log.rs  menu.rs  mod.rs  quit.rs  trading.rs
src/system/: damage_system.rs  experience_system.rs  inventory_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_system.rs  particle_system.rs  ranged_combat_system.rs  trigger_system.rs  visibility_system.rs
