[package]
name = "terminalia"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ctrlc = "3.5.0"
indexmap = "2.12.1"
lazy_static = "1.5.0"
log = "0.4.28"
rand = "0.9.2"
ratatui = "0.29.0"
rltk = "0.8.7"
simplelog = "0.12.2"
specs = "0.20.0"
specs-derive = "0.4.1"
